--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@ ul:has(li:hover) li:not(:hover){
 }
 
 #container-header {
-    background-color: #ccb598;
+    background-color: #00007d;
+    color: white;
     box-shadow: 1px 1px 2px #80808094;
 
     display: flex;
@@ -32,7 +33,7 @@ ul:has(li:hover) li:not(:hover){
 
 .botao-login {
     padding: 10px;
-    color: black;
+    color: white;
     font-size: large;
 }
 
@@ -41,7 +42,7 @@ ul:has(li:hover) li:not(:hover){
     padding-top: 20px;
     margin-top: 20px;
     border-radius: 25px;
-    color: black; 
+    color: white    ; 
     position: relative;
     top: 0.4rem;
 
@@ -66,11 +67,17 @@ ul:has(li:hover) li:not(:hover){
    background-color: #e5e5e5;
    border: 1px solid #cbb59a;
    border-radius: 3px;
+   padding: 0;
 
 }
 
 .menu-lateral-items{
-    margin-bottom: 30px;
+    padding-top: 10px;
+    margin-left: 0;
+    padding-bottom: 10px;
+    font-size: large;
+    border-bottom: 0.1em solid gray ;
+    
 }
 
 .container-article {
@@ -106,8 +113,8 @@ ul:has(li:hover) li:not(:hover){
 }
 
 .valor-produto {
-    background-color: #76604c;
-    color: white;
+    background-color: white;
+    color: black;
     border-radius: 5px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.493);
 
@@ -135,8 +142,8 @@ ul:has(li:hover) li:not(:hover){
 }
 
 .botao-comprar-produto {
-    background-color: #3ec9a7;
-    color: black;
+    background-color:#13640e;
+    color: white;
     border-radius: 5px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.493);
 
@@ -154,7 +161,7 @@ ul:has(li:hover) li:not(:hover){
 }
 
 .botao-add-carrinho {
-    background-color: #98d9b6;
+    background-color: #381ce3;
     color: white;
     border-radius: 5px;
     box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.493);
@@ -193,12 +200,14 @@ ul:has(li:hover) li:not(:hover){
 #barra-pesquisa {
 
     float: left;
-    background-color: transparent;
+    background-color: white;
     padding-left: 5px;
     font-size: 15px;
     border: none;
-    height: 32px;
+    height: 30px;
     width: 200px;
+    border-radius: 16px;
+    font-style: italic;
     
 }
 
@@ -208,3 +217,6 @@ ul:has(li:hover) li:not(:hover){
     right: 0.5rem;
 }
 
+.tamanho-roupas{
+    text-align: center;
+}
